Fix spacing

--- a/styles/main.css
+++ b/styles/main.css
@@ -75,7 +75,7 @@ p {
   margin-bottom: 1.5rem !important;
 }
 .rating__star-icon {
-  margin-bottom: 1rem;
+  margin-bottom: 1rem !important;
 }
 .rating__star-icon--oval {
   width: 2.5rem;
@@ -91,7 +91,7 @@ p {
   width: 100%;
   display: flex;
   column-gap: 1.125rem;
-  margin-bottom: 1.5rem;
+  margin-bottom: 1.5rem !important;
 }
 .rating__item {
   color: hsl(216, 12%, 54%);
@@ -161,13 +161,14 @@ p {
 @media screen and (min-width: 700px) {
   .main-container {
     width: 25.75rem;
+    height: 26rem;
   }
   .rating {
     padding: 2rem;
     border-radius: 1.875rem;
   }
   .rating h1 {
-    margin-bottom: 0.4375rem !important;
+    margin-bottom: 0.625rem !important;
     font-size: 1.75rem;
     line-height: 2.1875rem;
   }
@@ -176,7 +177,7 @@ p {
     line-height: 1.5rem;
   }
   .rating__star-icon {
-    margin-bottom: 1.875rem;
+    margin-bottom: 2rem !important;
   }
   .rating__star-icon--oval {
     width: 3rem;
@@ -190,7 +191,7 @@ p {
     display: flex;
     justify-content: space-between;
     column-gap: 1.3125rem;
-    margin-bottom: 2rem;
+    margin-bottom: 2rem !important;
   }
   .rating__item {
     font-size: 1rem;
