--- a/styles/scss/1-utils/_breakpoints.scss
+++ b/styles/scss/1-utils/_breakpoints.scss
@@ -2,6 +2,7 @@
 
     .main-container {
         width: toRem(412);
+        height: toRem(416);
     }
 
     .rating {
@@ -9,7 +10,7 @@
         border-radius: toRem(30);
 
         h1 {
-            margin-bottom: toRem(7) !important;
+            margin-bottom: toRem(10) !important;
             font-size: toRem(28);
             line-height: toRem(35);
         }
@@ -20,7 +21,7 @@
         }
 
         &__star-icon {
-            margin-bottom: toRem(30);
+            margin-bottom: toRem(32) !important;
 
             &--oval {
                 width: toRem(48);
@@ -37,7 +38,7 @@
             display: flex;
             justify-content: space-between;
             column-gap: toRem(21);
-            margin-bottom: toRem(32);
+            margin-bottom: toRem(32) !important;
         }
 
         &__item {
