--- a/styles/scss/3-components/_cards.scss
+++ b/styles/scss/3-components/_cards.scss
@@ -31,7 +31,7 @@
     }
 
     &__star-icon {
-        margin-bottom: toRem(16);
+        margin-bottom: toRem(16) !important;
 
         &--oval {
             width: toRem(40);
@@ -49,7 +49,7 @@
         width: 100%;
         display: flex;
         column-gap: toRem(18);
-        margin-bottom: toRem(24);
+        margin-bottom: toRem(24) !important;
     }
     &__item {
         color: $mediumGrey;
